--- a/extractor.ini
+++ b/extractor.ini
@@ -3,7 +3,7 @@ NumFields=7
 
 [Field 1]
 Type=Groupbox
-; Text="This is a group box..."
+Text="Select format of SIP to convert ..."
 Left=0
 Right=-1
 Top=0
